tests/ui/traits/next-solver/cycles/cycle-modulo-ambig-aliases.stderr
error[E0284]: type annotations needed: cannot satisfy `_: '_`
  --> $DIR/cycle-modulo-ambig-aliases.rs:87:11
   |
LL |     foo::<&_>();
   |           ^^ cannot satisfy `_: '_`

error[E0275]: overflow evaluating the requirement `&_: Typed`
  --> $DIR/cycle-modulo-ambig-aliases.rs:87:11
   |
LL |     foo::<&_>();
   |           ^^
   |
note: required by a bound in `foo`
  --> $DIR/cycle-modulo-ambig-aliases.rs:84:11
   |
LL | fn foo<T: Typed>() {}
   |           ^^^^^ required by this bound in `foo`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0275, E0284.
For more information about an error, try `rustc --explain E0275`.
